--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,6 +76,22 @@ img {
     padding-left: 10%;
 }
 
+#shortcuts ,#extended_shortcuts{
+    display: flex;
+    flex-direction: column;
+}
+
+#shortcuts div {
+    display: flex;
+}
+
+#extended_shortcuts div {
+    display: flex;
+}
+
+#logo{
+    display: flex;
+}
 /* CONTENT */
 #content{
     background-color: cadetblue;
@@ -158,11 +174,47 @@ img {
     display: grid;
     grid-template-columns: 6fr 2fr;
     padding:4% 4%;
+    gap:50px;
 }
 
     #projects{
         display: flex;
         flex-direction: column ;
+        justify-content: flex-start;
+        gap:10px; 
     }
 
-    
+        #grid{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
+            row-gap: 20px;
+            column-gap: 20px;
+            justify-items:flex-start;
+        }
+
+        .card{
+            width:300px;
+            /* border: 5px solid black; */
+            border-radius: 15px;
+            padding:3% 5%;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .card p:first-child {
+            font-weight: 700;
+        }
+        
+        .images{
+            display: flex;
+            align-self: flex-end;
+        }
+
+        .desc{
+            display: flex;
+            flex-direction: column;
+            gap:8px;
+        }
