--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,7 +114,7 @@ img {
         justify-items: center; */
         display: flex;
         justify-content: space-between;
-        padding:3% 4%;
+        padding:1% 4%;
     }
 
         #searchbar{
@@ -144,11 +144,11 @@ img {
         }
 
     #info{
+        grid-row: 2/3;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         padding: 0% 4%;
-        height: fit-content;
-
     }
 
         #greeting{
@@ -180,7 +180,7 @@ img {
     #projects{
         display: flex;
         flex-direction: column ;
-        justify-content: flex-start;
+        justify-content: space-between;
         gap:10px; 
     }
 
@@ -202,6 +202,7 @@ img {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            border-left: 5px solid rgb(231, 120, 46);
         }
 
         .card p:first-child {
@@ -218,3 +219,56 @@ img {
             flex-direction: column;
             gap:8px;
         }
+    
+
+    #content_right{
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        row-gap: 10px;
+    }
+    #announcements{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        gap:10px;
+    }
+    #announcements_box{
+        display: flex;
+        height: 100%;
+        flex-direction: column;
+        justify-content: space-around;
+        background-color: white;
+        border-radius: 15px;
+        padding: 4%;
+    }
+
+    #trending{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    #trending_box{
+        background-color: white;
+        border-radius: 15px;
+        padding: 10%;
+        height:100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .user {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        text-align: left;
+        gap:8px;
+    }
+
+    .trend_user{
+        display: flex;
+        justify-content: flex-start;
+        gap:20px
+    }
